# word-memorize-software

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.user.b248548  Image_processing.h  README.md  acrylicframe.cpp  acrylicframe.h  afternoon.css  appinit.cpp  appinit.h  cet4.json  cet6.json  class.cpp  class.h  class_frame.cpp  class_frame.h  classcue_frame.cpp  classcue_frame.h  classcue_frame.ui  database.cpp  database.h  day.css  game.cpp  game.h  game.ui  ielts.json  login.cpp  login.h  login.ui  login.ui.autosave  main.cpp  morning.css  newclass_frame.cpp  newclass_frame.h  newclass_frame.ui  night.css  question.cpp  question.h  (+38 more)
.VSCodeCounter/2024-05-08_10-06-37/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
pics/night_bg/: night_view.jfif
selenium/chromedriver-win64/: ver124.0.6367.202.txt
selenium/selenium_test/: main.py  t.py
